--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -1,15 +1,12 @@
-#-----------------------------
-# GitHub Action Part-1
-#-----------------------------
 name: My-GitHubActions-Basics
 on: 
   push: 
     branches: 
-      -main
+      - main
 
 jobs: 
   my_testing:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Print nice message
         run: echo "Hello World"
